--- a/main.css
+++ b/main.css
@@ -1,38 +1,69 @@
 #racecar-flex-card-container {
     display: flex;
     position: absolute;
-
-    justify-content: center;
-    /* margin-top: 175px; */
-    flex-direction: row;
-    width:100%;
-    flex-wrap: wrap;
-    align-content: center;
-    /* align-items: center; */
+    top: 0px;
+    left: 0px;
     height: 100%;
-
-   
+    width:100%;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;   
 }
 
-#racecar-card-container{
+/* #racecar-card-container{
     padding: 50px;
     width: auto;
-}
+} */
 
 .card {
+    display: flex;
+    /* flex-direction: column; */
     width:280px;
     height: 500px;
-    border: solid 1px black;
+    /* border: solid 1px black; */
 }
 
-.transition {
+.invisible-wall {
+    width: 400px;
+    height: 660px;
+    z-index: 250;
+    background-color: white;
+    opacity: .6;
+    position: absolute;
+    top: 0px;
+}
+
+#popup-container {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 80%;
+    background-color: darkgray;
+    z-index: 1000;
+    left: 0;
+    top: 80px;
+    opacity: 0.98;
+    padding: 5px;
+    overflow: scroll;
+
+}
+
+/* .transition {
     transition: width 2s, height 2s, transform 2s;
     transform: rotate(-40deg);
+} */
+
+.car-title {
+    color: white;
+    font-size: 40px;
+    align-self: flex-end;
 }
 
 .card-1 {
     position: relative;
-    background-color: lightgoldenrodyellow;
+    /* background-color: lightgoldenrodyellow; */
+    background-image: url('assets/Wing-small.jpg');
     z-index: 300;
     top: 525px;
     left: -30px;
@@ -41,7 +72,9 @@
 
 .card-2 {
     position: relative;
-    background-color: lightcoral;
+    /* background-color: lightcoral; */
+    background-image: url('assets/CamaroGrandville-small.jpg');
+    background-size: cover;
     z-index: 200;
     top: 0px;
     left: 0px;
