--- a/main.css
+++ b/main.css
@@ -186,6 +186,7 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    flex-shrink: 0;
     
 }
 
@@ -422,8 +423,8 @@ body {
         display: none;
         /* margin-top: 1%; */
         flex-direction: column;
-        width: 40%;
-        height: 85vh;
+        width: 70vw;
+        height: 90vh;
         background-color: #F8F8F8;
         z-index: 1000;
         opacity: 0.98;
